# personal-assistant-adk

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  connect_clients.py  deploy.sh  mcp_allow_script.sh  mcp_script.sh  mcp_script_env.sh  mcp_script_proj_env.sh  mcp_server.py  mcp_venv_script.sh  mcp_venv_script_fix.sh  memory_app.py  pyproject.toml  requirements.txt  run.py  serve.py  sync_claude_memory.py  test_e2e.py  test_mcp.py
.cursor/: mcp.json
.github/workflows/: ci.yml
adk_apps/showcase_assistant/: __init__.py  agent.py  evalset196e20.evalset.json
personal_assistant/: .env.example  __init__.py  agent.py
personal_assistant/agents/: __init__.py  career_agent.py  data_agent.py  finance_agent.py  research_agent.py  scheduler_agent.py  sports_agent.py  tech_agent.py
personal_assistant/channels/: __init__.py  base.py  registry.py  webhook.py
personal_assistant/dashboard/: mission_control.css  mission_control.html  mission_control_agents.html  mission_control_console.html  mission_control_overview.html  mission_control_sessions.html  mission_control_shared.js
personal_assistant/memory/: __init__.py  embeddings.py  engine.py  models.py  server.py  store.py
personal_assistant/shared/: __init__.py  a2a.py  adk_plugins.py  automation.py  callbacks.py  config.py  plugins.py  prompts.py  security.py  skills.py  toolsets.py
personal_assistant/tools/: __init__.py  career_tools.py  data_tools.py  finance_tools.py  scheduler_tools.py  sports_tools.py  tech_tools.py  weather_tools.py  web_tools.py
plugins/example_logger/: __init__.py  plugin.json
tests/: test_agents.py  test_callbacks.py  test_config.py  test_eval.py  test_security_runtime.py  test_serve_security.py
workspace/: AGENTS.md  IDENTITY.md  SOUL.md  TOOLS.md  USER.md
(+4 files in other folders)
